tests/semantic_errors/andrei9_6.tl
require"ifj21"

-- wrong arithm types
function main()
    local id : integer = 34 .."str"
end

main()
